<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nishikanto.howtoapp.Pizza"
    android:background="#FF9800">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="How to Control Anger"
            android:textSize="25dp" />

        <TextView
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Everyone gets angry on occasion. If you are experiencing overwhelming rage, though, it could be damaging your mental and physical health as well as your relationships with others. Uncontrolled anger can be indicative of underlying problems, such as anger management issues or mental disorder. It is important to control your emotions and calm yourself down for your own sake as well as for the sake of those around you.\n"
            android:textSize="18dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger1"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step1"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger2"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step2"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger3"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step3"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger4"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step4"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger5"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step5"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger6"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step6"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/anger7"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_step7"
            />

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nCollected From : www.wikihow.com"/>

    </LinearLayout>
</ScrollView>
